<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/light_gray">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.sunny.youyun.activity.forget_pass.ForgetPassActivity">

        <include
            android:id="@+id/include5"
            layout="@layout/bar_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/imageView5"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include5"
            app:srcCompat="@drawable/icon_logo_round" />

        <com.sunny.youyun.views.RichEditText
            android:id="@+id/et_username"
            style="@style/et_style"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            app:drawable_height="16dp"
            app:drawable_location="left"
            app:drawable_src="@drawable/icon_persen"
            app:drawable_width="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <com.sunny.youyun.views.RichEditText
            android:id="@+id/et_password"
            style="@style/et_style"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_code"
            android:inputType="textPassword"
            app:drawable_height="16dp"
            app:drawable_location="left"
            app:drawable_src="@drawable/icon_confirm_code"
            app:drawable_width="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            tools:layout_editor_absoluteY="372dp" />

        <com.sunny.youyun.views.RichEditText
            android:id="@+id/et_confirm_code"
            style="@style/et_style"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            app:drawable_height="16dp"
            app:drawable_location="left"
            app:drawable_src="@drawable/icon_password"
            app:drawable_width="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <com.sunny.youyun.views.RichEditText
            android:id="@+id/et_confirm_pass"
            style="@style/et_style"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            app:drawable_height="16dp"
            app:drawable_location="left"
            app:drawable_src="@drawable/icon_confirm"
            app:drawable_width="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_code" />

        <Button
            android:id="@+id/btn_login"
            style="?borderlessButtonStyle"
            android:layout_width="@dimen/imgBtn_long_width"
            android:layout_height="@dimen/imgBtn_height"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/btn_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_pass" />

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/click_send"
            android:textColor="@color/text_gray_light"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>