...
                android:text="xxxxx"
                app:layout_constraintBottom_toTopOf="@+id/img_icon"
                app:layout_constraintStart_toEndOf="@+id/img_icon"
                app:layout_constraintTop_toBottomOf="@+id/img_icon" />

            <ImageView
                android:id="@+id/img_qr_code"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
...
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/line_gray" />

        <com.sunny.youyun.views.LineMenuItem
            android:id="@+id/li_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mine_item_height"
            android:background="@drawable/ripple_bg_white"
            android:gravity="center"
            android:textSize="14sp"
            app:is_left_icon_visible="true"
...
