<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="BaseQuickAdapter_viewholder_support" type="id"/>
    <item name="BaseQuickAdapter_swiping_support" type="id"/>
    <item name="BaseQuickAdapter_dragging_support" type="id"/>
    <item name="BaseQuickAdapter_databinding_support" type="id"/>
    <item name="bar_right_icon" type="id">bar_right_icon</item>
</resources>